@@ -1,0 +1,70 @@
+/* XPM */
+static const char *const fullscreen_xpm[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 48 1",
+"  c #82837F",
+". c #3465A4",
+"X c #3566A4",
+"o c #3767A5",
+"O c #3B6AA7",
+"+ c #406EA9",
+"@ c #4370AA",
+"# c #4672AB",
+"$ c #4B76AE",
+"% c #4E78AE",
+"& c #577FB2",
+"* c #5F84B4",
+"= c #678BB9",
+"- c #6F91BD",
+"; c #7A98C0",
+": c #848681",
+"> c #888A85",
+", c #8BA6C9",
+"< c #90AACA",
+"1 c #99B0CC",
+"2 c #9EB5D1",
+"3 c #A0B4CF",
+"4 c #A2B6CF",
+"5 c #A6BAD4",
+"6 c #B7C7DB",
+"7 c #B9C7D8",
+"8 c #BDCBDC",
+"9 c #C7D2DF",
+"0 c #C9D3E0",
+"q c #CCD7E3",
+"w c #D3DBE6",
+"e c #D9E1EA",
+"r c #DBE2EA",
+"t c #EFEEEC",
+"y c #EFEFED",
+"u c #F0F0EF",
+"i c #F2F2F0",
+"p c #F3F3F1",
+"a c #F4F3F2",
+"s c #F4F4F2",
+"d c #F4F5F4",
+"f c #F7F6F6",
+"g c #F8F8F7",
+"h c #F8F9F8",
+"j c #FBFAFA",
+"k c #FBFBFA",
+"l c #FCFCFD",
+"z c #FFFFFF",
+/* pixels */
+">>>>>>>>>>>>>>>>",
+">zzzzzzzzzzzzzz>",
+">z..X.ttyy....z>",
+">z..Xttyyyy...z>",
+">z..#*uuss%+..z>",
+">z.y&,4uu1-&sOz>",
+">zuuy470w82asiz>",
+">zuiuu9usqsddsz>",
+">zsssfqsfrfhhfz>",
+">zhff<6wr95jjjz>",
+">z.h%=,fj4-$j.z>",
+">z..O#hhjj+O.Xz>",
+">z...jhhjjj...z>",
+">z....jjzl....z>",
+">zzzzzzzzzzzzzz>",
+":>>>>>>>>>>>>>> "
+};
