@@ -1,0 +1,206 @@
+/* fullscreen.png - 650 bytes */
+static const unsigned char full_screen_16x16_png[] = {
+  0x89, 0x50, 0x4e, 0x47, 0x0d, 0x0a, 0x1a, 0x0a,
+  0x00, 0x00, 0x00, 0x0d, 0x49, 0x48, 0x44, 0x52,
+  0x00, 0x00, 0x00, 0x10, 0x00, 0x00, 0x00, 0x10,
+  0x08, 0x06, 0x00, 0x00, 0x00, 0x1f, 0xf3, 0xff,
+  0x61, 0x00, 0x00, 0x00, 0x06, 0x62, 0x4b, 0x47,
+  0x44, 0x00, 0xff, 0x00, 0xff, 0x00, 0xff, 0xa0,
+  0xbd, 0xa7, 0x93, 0x00, 0x00, 0x00, 0x09, 0x70,
+  0x48, 0x59, 0x73, 0x00, 0x00, 0x0b, 0x13, 0x00,
+  0x00, 0x0b, 0x13, 0x01, 0x00, 0x9a, 0x9c, 0x18,
+  0x00, 0x00, 0x00, 0x07, 0x74, 0x49, 0x4d, 0x45,
+  0x07, 0xd6, 0x03, 0x10, 0x13, 0x0d, 0x35, 0xe2,
+  0x77, 0xdf, 0x9a, 0x00, 0x00, 0x00, 0x35, 0x74,
+  0x45, 0x58, 0x74, 0x43, 0x6f, 0x6d, 0x6d, 0x65,
+  0x6e, 0x74, 0x00, 0x28, 0x63, 0x29, 0x20, 0x32,
+  0x30, 0x30, 0x34, 0x20, 0x4a, 0x61, 0x6b, 0x75,
+  0x62, 0x20, 0x53, 0x74, 0x65, 0x69, 0x6e, 0x65,
+  0x72, 0x0a, 0x0a, 0x43, 0x72, 0x65, 0x61, 0x74,
+  0x65, 0x64, 0x20, 0x77, 0x69, 0x74, 0x68, 0x20,
+  0x54, 0x68, 0x65, 0x20, 0x47, 0x49, 0x4d, 0x50,
+  0x90, 0xd9, 0x8b, 0x6f, 0x00, 0x00, 0x01, 0xd6,
+  0x49, 0x44, 0x41, 0x54, 0x38, 0xcb, 0x9d, 0x93,
+  0x3b, 0x68, 0x93, 0x51, 0x14, 0xc7, 0x7f, 0xff,
+  0x9b, 0x1b, 0x35, 0x15, 0x69, 0xd3, 0x25, 0x48,
+  0xf1, 0x05, 0x71, 0x08, 0x08, 0x82, 0x20, 0x94,
+  0x2a, 0x76, 0x2a, 0x14, 0x5f, 0x50, 0xc5, 0xc9,
+  0xc7, 0xe0, 0xd0, 0xc1, 0x2a, 0xd5, 0xc5, 0x41,
+  0x70, 0x70, 0x48, 0xf9, 0x9a, 0xe0, 0xa8, 0x60,
+  0x06, 0xc1, 0x41, 0x50, 0x02, 0xed, 0xe0, 0xb3,
+  0x56, 0x51, 0x74, 0x50, 0x71, 0x0d, 0x2d, 0x8a,
+  0x25, 0x2d, 0x16, 0x45, 0x6a, 0x4d, 0x53, 0x15,
+  0x4d, 0x4c, 0xfb, 0x75, 0xf8, 0x92, 0xd8, 0xbc,
+  0x1c, 0x72, 0xe0, 0xc0, 0x85, 0x73, 0xcf, 0xef,
+  0xfe, 0xcf, 0xb9, 0xe7, 0xc8, 0x89, 0x45, 0x6f,
+  0x00, 0xfd, 0x34, 0x67, 0x09, 0x9c, 0x58, 0xd4,
+  0x6d, 0xd6, 0x9c, 0x58, 0xd4, 0xb5, 0x25, 0xd4,
+  0xee, 0xfe, 0xdb, 0x15, 0xe8, 0x27, 0xc3, 0xbd,
+  0x00, 0x48, 0x06, 0x70, 0xe9, 0xb9, 0xf8, 0xa8,
+  0x22, 0xfe, 0x2e, 0x71, 0x1c, 0x00, 0x53, 0xad,
+  0xc9, 0x18, 0xfd, 0x4b, 0x06, 0x24, 0x90, 0xc4,
+  0xd3, 0xf8, 0x7e, 0x8c, 0x51, 0x4d, 0x0d, 0xa6,
+  0x3a, 0x79, 0x43, 0xc0, 0xcf, 0x85, 0xeb, 0x6f,
+  0xbc, 0x97, 0x65, 0x50, 0xd1, 0x4f, 0x39, 0x2f,
+  0x68, 0x59, 0x6b, 0xb1, 0x3e, 0xd5, 0x07, 0x48,
+  0x30, 0xe6, 0xf4, 0xb2, 0xb1, 0x3d, 0x40, 0xb8,
+  0xa3, 0x95, 0x7b, 0xaf, 0x67, 0x90, 0x3c, 0x19,
+  0x77, 0x9e, 0x7f, 0x64, 0xc7, 0xd6, 0x76, 0x42,
+  0xc1, 0x00, 0xe3, 0xf1, 0x83, 0xf8, 0x56, 0x29,
+  0x29, 0xf7, 0x60, 0x3c, 0x76, 0x00, 0x80, 0x6b,
+  0x83, 0x7b, 0x19, 0x7d, 0x35, 0x4d, 0x28, 0x18,
+  0xe0, 0xfd, 0xa7, 0x45, 0xac, 0x35, 0x84, 0x3b,
+  0xda, 0x58, 0x63, 0x7d, 0x5c, 0x3a, 0xb1, 0x0b,
+  0x17, 0xf1, 0xec, 0xea, 0xa1, 0x5a, 0x80, 0xe4,
+  0x55, 0x2d, 0xa0, 0x6f, 0xdf, 0x36, 0x26, 0xa6,
+  0x33, 0x44, 0xb6, 0xb4, 0x61, 0x64, 0xf8, 0x30,
+  0xbb, 0x40, 0x67, 0x24, 0x5c, 0xbe, 0xe7, 0xae,
+  0xaa, 0xbc, 0x0c, 0xb0, 0xb6, 0x74, 0xf4, 0x20,
+  0x7e, 0xbf, 0xc5, 0xfa, 0xfc, 0xc8, 0x88, 0xf5,
+  0x2d, 0xeb, 0xf0, 0x59, 0x0b, 0x12, 0xc2, 0x05,
+  0x57, 0xf5, 0x7a, 0x60, 0x90, 0x84, 0x91, 0x21,
+  0xf1, 0x60, 0x82, 0xb9, 0x85, 0x3f, 0x4c, 0x7d,
+  0xce, 0x32, 0x3b, 0xf7, 0x93, 0xec, 0xaf, 0x3c,
+  0x23, 0x2f, 0xa7, 0x8a, 0xbf, 0x62, 0x4a, 0x72,
+  0x2b, 0x01, 0xdd, 0xe7, 0x47, 0x91, 0x0c, 0xc7,
+  0xae, 0x3c, 0x66, 0x72, 0x26, 0x43, 0x2a, 0xfd,
+  0x9d, 0xed, 0x9b, 0x82, 0x6c, 0x0e, 0xb5, 0x92,
+  0x4a, 0xcf, 0xf3, 0x76, 0xf2, 0x2b, 0x47, 0x2e,
+  0x3f, 0x04, 0x60, 0xcf, 0xd9, 0x64, 0x2d, 0xc0,
+  0x75, 0xa1, 0x7b, 0x70, 0x84, 0xcc, 0x8f, 0x1c,
+  0xe9, 0x2f, 0x8b, 0x9c, 0x3b, 0xba, 0x13, 0x49,
+  0x48, 0xe2, 0x64, 0x4f, 0x84, 0x54, 0x7a, 0x9e,
+  0x6f, 0xd9, 0xdf, 0x74, 0x0d, 0x24, 0x1b, 0xcf,
+  0xc1, 0xb2, 0x0b, 0xb9, 0xbf, 0x4b, 0xdc, 0x77,
+  0x0e, 0x7b, 0x9d, 0x28, 0x02, 0x24, 0x31, 0x16,
+  0xef, 0x63, 0x69, 0xd9, 0xfd, 0xff, 0x20, 0x95,
+  0xac, 0x6b, 0x20, 0x89, 0x31, 0xc2, 0xc8, 0x73,
+  0x64, 0xe8, 0x3c, 0x73, 0xb7, 0xee, 0x36, 0xd9,
+  0xea, 0xd9, 0x6e, 0x64, 0x8d, 0xe2, 0xb6, 0x50,
+  0x28, 0xdc, 0x1c, 0x8e, 0x0f, 0x9d, 0x6e, 0x66,
+  0x97, 0xf3, 0xb9, 0xfc, 0xad, 0x15, 0x8e, 0xd3,
+  0xb9, 0x9f, 0x51, 0xdb, 0x23, 0xbd, 0x00, 0x00,
+  0x00, 0x00, 0x49, 0x45, 0x4e, 0x44, 0xae, 0x42,
+  0x60, 0x82};
+
+/* full_screen.png - 949 bytes */
+static const unsigned char full_screen_24x24_png[] = {
+  0x89, 0x50, 0x4e, 0x47, 0x0d, 0x0a, 0x1a, 0x0a,
+  0x00, 0x00, 0x00, 0x0d, 0x49, 0x48, 0x44, 0x52,
+  0x00, 0x00, 0x00, 0x18, 0x00, 0x00, 0x00, 0x18,
+  0x08, 0x06, 0x00, 0x00, 0x00, 0xe0, 0x77, 0x3d,
+  0xf8, 0x00, 0x00, 0x00, 0x06, 0x62, 0x4b, 0x47,
+  0x44, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xf9,
+  0x43, 0xbb, 0x7f, 0x00, 0x00, 0x00, 0x09, 0x70,
+  0x48, 0x59, 0x73, 0x00, 0x00, 0x0b, 0x13, 0x00,
+  0x00, 0x0b, 0x13, 0x01, 0x00, 0x9a, 0x9c, 0x18,
+  0x00, 0x00, 0x00, 0x09, 0x76, 0x70, 0x41, 0x67,
+  0x00, 0x00, 0x00, 0x18, 0x00, 0x00, 0x00, 0x18,
+  0x00, 0x78, 0x4c, 0xa5, 0xa6, 0x00, 0x00, 0x02,
+  0x9d, 0x49, 0x44, 0x41, 0x54, 0x48, 0xc7, 0xd5,
+  0x94, 0x4d, 0x48, 0x54, 0x51, 0x14, 0xc7, 0x7f,
+  0xe7, 0xcc, 0x94, 0x4c, 0x5a, 0x3a, 0x03, 0x21,
+  0xe1, 0x47, 0x06, 0x4a, 0x08, 0x42, 0xab, 0x20,
+  0x2c, 0xd2, 0x8d, 0x20, 0x7d, 0x81, 0x45, 0x6d,
+  0xa2, 0x16, 0x2d, 0x0c, 0xb2, 0xb0, 0x16, 0x49,
+  0x10, 0x2d, 0x5a, 0x18, 0xe3, 0x0c, 0x2d, 0x0b,
+  0x12, 0x0a, 0x5a, 0x04, 0x85, 0x60, 0x8b, 0x3e,
+  0xcd, 0xa2, 0x68, 0x53, 0xd1, 0x56, 0x92, 0x40,
+  0x11, 0xed, 0x8b, 0x32, 0xf3, 0x23, 0x25, 0x67,
+  0x1c, 0xe7, 0xb5, 0x78, 0xf7, 0xbd, 0x79, 0x33,
+  0xce, 0xe4, 0x04, 0xb6, 0xe8, 0xc0, 0x7d, 0xe7,
+  0xde, 0x77, 0xef, 0xfb, 0xff, 0xcf, 0x39, 0xf7,
+  0x7f, 0x1e, 0xfc, 0xef, 0x26, 0xce, 0x24, 0x1c,
+  0xe9, 0xbc, 0x06, 0xb4, 0xae, 0x10, 0x6e, 0xf7,
+  0xb9, 0x8e, 0xf3, 0xc7, 0xd3, 0xde, 0x84, 0x23,
+  0x9d, 0xd6, 0x4a, 0x59, 0x38, 0xd2, 0x69, 0x39,
+  0xb8, 0xfe, 0x4c, 0xea, 0xad, 0xad, 0xb7, 0xd2,
+  0xd6, 0x4f, 0xba, 0x9a, 0xb3, 0xe4, 0x2d, 0x08,
+  0x02, 0x58, 0x34, 0x75, 0x3c, 0x4a, 0xdb, 0x7a,
+  0xdb, 0x7d, 0x38, 0x6d, 0xad, 0xb9, 0x72, 0x54,
+  0x15, 0x17, 0x5c, 0xcc, 0x43, 0x10, 0x44, 0x6c,
+  0x68, 0x11, 0x10, 0x11, 0x9e, 0x46, 0x77, 0xa1,
+  0x2a, 0xe4, 0xc4, 0xc9, 0x05, 0xbe, 0x36, 0xb0,
+  0x8a, 0x33, 0x57, 0x5f, 0x23, 0xa2, 0x20, 0x8a,
+  0xa0, 0xa0, 0x86, 0x40, 0xd4, 0x1d, 0x47, 0xc3,
+  0x2f, 0x58, 0x53, 0xe0, 0xc7, 0xef, 0x93, 0xfc,
+  0x08, 0x44, 0xa0, 0x2f, 0xdc, 0xcc, 0x86, 0x50,
+  0x80, 0xea, 0xb2, 0x62, 0xee, 0xbd, 0x1a, 0xb5,
+  0xa3, 0x55, 0x50, 0x71, 0x08, 0xec, 0x8c, 0x6e,
+  0x3f, 0x1f, 0xa2, 0xae, 0x2a, 0x44, 0x69, 0x30,
+  0x40, 0x7f, 0x74, 0x0f, 0xbe, 0x2c, 0x99, 0x2c,
+  0x21, 0xe8, 0x8f, 0xec, 0x46, 0x44, 0xb9, 0xd2,
+  0xbe, 0x83, 0x8a, 0xf5, 0x45, 0x94, 0x06, 0x03,
+  0xbc, 0xff, 0x30, 0x63, 0x47, 0x8c, 0xd8, 0xf5,
+  0x17, 0x61, 0xe8, 0xd3, 0x0c, 0xd5, 0x65, 0x25,
+  0xd4, 0x94, 0x17, 0x73, 0xfd, 0x6c, 0x23, 0x88,
+  0xf2, 0xec, 0xf2, 0xde, 0xfc, 0x32, 0x10, 0x73,
+  0x89, 0x2d, 0x3b, 0x37, 0xb1, 0xae, 0xb0, 0x80,
+  0xda, 0x8d, 0x25, 0x28, 0x02, 0x2a, 0x26, 0x0b,
+  0x65, 0x73, 0x79, 0x09, 0xc1, 0xa2, 0xd5, 0x1c,
+  0x6a, 0xac, 0x46, 0x10, 0x54, 0xb0, 0xd3, 0xcc,
+  0x30, 0xff, 0x52, 0x02, 0xc5, 0x08, 0x04, 0x15,
+  0xa8, 0xab, 0x0a, 0xd9, 0xac, 0x0e, 0xb9, 0x65,
+  0x2e, 0x5c, 0x84, 0xcd, 0x95, 0x21, 0x23, 0x02,
+  0xc1, 0x12, 0x50, 0x8b, 0x7c, 0x08, 0x4c, 0x1d,
+  0x1d, 0xa7, 0xae, 0x84, 0x10, 0x0b, 0x2c, 0xc3,
+  0x2f, 0x9e, 0x68, 0x6d, 0x62, 0xc9, 0x2a, 0x99,
+  0x2c, 0x04, 0x4e, 0x4c, 0xce, 0xc2, 0x72, 0x37,
+  0xc4, 0xb3, 0xef, 0xac, 0xdd, 0xef, 0x34, 0x75,
+  0x74, 0x99, 0x3b, 0x70, 0x54, 0x62, 0x03, 0x0c,
+  0x8e, 0x4d, 0x21, 0xa4, 0x2e, 0x18, 0x51, 0xb7,
+  0x17, 0xc6, 0xbe, 0xcd, 0xda, 0x73, 0x55, 0x57,
+  0xbe, 0x79, 0x10, 0xd8, 0x87, 0x55, 0x94, 0xee,
+  0x07, 0xef, 0x18, 0x9f, 0x9a, 0x67, 0xf8, 0xf3,
+  0xb4, 0xfb, 0x4e, 0x4c, 0x10, 0x1f, 0xc7, 0x67,
+  0x99, 0x9e, 0x8b, 0xd3, 0xfb, 0x72, 0x38, 0x55,
+  0x32, 0xc9, 0x43, 0xa6, 0x0d, 0xa7, 0xef, 0x22,
+  0xa2, 0x1c, 0xbc, 0xf8, 0x98, 0xc1, 0xd1, 0x49,
+  0x06, 0x46, 0x7e, 0x50, 0x53, 0x11, 0x74, 0x01,
+  0x9c, 0x68, 0x2b, 0x4b, 0x8b, 0x19, 0x18, 0x99,
+  0xe0, 0xcd, 0xe0, 0x57, 0xf6, 0x5f, 0x78, 0x08,
+  0xc0, 0xf6, 0x93, 0x3d, 0xcb, 0x13, 0x58, 0x16,
+  0x34, 0xb4, 0xf7, 0x32, 0xf9, 0x33, 0xc6, 0xc8,
+  0x97, 0x19, 0x4e, 0x1d, 0xd8, 0xe2, 0x96, 0xcd,
+  0x91, 0xb0, 0xd3, 0x0b, 0x47, 0x9a, 0x6a, 0x19,
+  0x18, 0x99, 0xe0, 0xfb, 0xf4, 0x2f, 0xea, 0xdb,
+  0x96, 0x82, 0x67, 0x25, 0x00, 0x48, 0x5a, 0x10,
+  0x5b, 0x58, 0xe4, 0x7e, 0x78, 0x5f, 0x5a, 0x73,
+  0x89, 0xa8, 0xa7, 0x9b, 0xed, 0xd1, 0x17, 0x6d,
+  0x61, 0x31, 0x69, 0x65, 0x83, 0x91, 0x9c, 0x04,
+  0x8e, 0xd5, 0xb7, 0xf5, 0xa0, 0x4e, 0x73, 0xa1,
+  0xa9, 0x26, 0x34, 0x44, 0x88, 0xb2, 0xed, 0xc4,
+  0x9d, 0x5c, 0x9f, 0xfb, 0x20, 0x8b, 0x4c, 0x33,
+  0x7f, 0xb7, 0xcb, 0xd9, 0x1f, 0xce, 0x4b, 0x1a,
+  0x41, 0x22, 0x91, 0xb8, 0xd1, 0x15, 0xbd, 0x74,
+  0xec, 0xaf, 0xd0, 0x73, 0x58, 0x3c, 0x16, 0xbf,
+  0x99, 0xc6, 0xe2, 0x49, 0x29, 0x00, 0x14, 0x1a,
+  0xef, 0x37, 0x25, 0xf4, 0x7b, 0xe6, 0xce, 0x00,
+  0x48, 0x9a, 0xb1, 0x00, 0x24, 0x8c, 0x8f, 0x03,
+  0xf3, 0xc0, 0x1c, 0x10, 0x03, 0x92, 0x99, 0xc2,
+  0xf5, 0x02, 0x8a, 0x07, 0x50, 0x3c, 0xde, 0xe7,
+  0x21, 0xb0, 0x80, 0x45, 0x8f, 0x4f, 0x1a, 0xbf,
+  0x60, 0xe6, 0xff, 0xde, 0x7e, 0x03, 0x3e, 0xaa,
+  0xe6, 0xa9, 0x1d, 0x34, 0x13, 0x4f, 0x00, 0x00,
+  0x00, 0x35, 0x74, 0x45, 0x58, 0x74, 0x43, 0x6f,
+  0x6d, 0x6d, 0x65, 0x6e, 0x74, 0x00, 0x28, 0x63,
+  0x29, 0x20, 0x32, 0x30, 0x30, 0x34, 0x20, 0x4a,
+  0x61, 0x6b, 0x75, 0x62, 0x20, 0x53, 0x74, 0x65,
+  0x69, 0x6e, 0x65, 0x72, 0x0a, 0x0a, 0x43, 0x72,
+  0x65, 0x61, 0x74, 0x65, 0x64, 0x20, 0x77, 0x69,
+  0x74, 0x68, 0x20, 0x54, 0x68, 0x65, 0x20, 0x47,
+  0x49, 0x4d, 0x50, 0x90, 0xd9, 0x8b, 0x6f, 0x00,
+  0x00, 0x00, 0x25, 0x74, 0x45, 0x58, 0x74, 0x64,
+  0x61, 0x74, 0x65, 0x3a, 0x63, 0x72, 0x65, 0x61,
+  0x74, 0x65, 0x00, 0x32, 0x30, 0x31, 0x30, 0x2d,
+  0x30, 0x37, 0x2d, 0x31, 0x35, 0x54, 0x30, 0x30,
+  0x3a, 0x35, 0x34, 0x3a, 0x31, 0x34, 0x2b, 0x30,
+  0x32, 0x3a, 0x30, 0x30, 0x27, 0xe8, 0x22, 0xef,
+  0x00, 0x00, 0x00, 0x25, 0x74, 0x45, 0x58, 0x74,
+  0x64, 0x61, 0x74, 0x65, 0x3a, 0x6d, 0x6f, 0x64,
+  0x69, 0x66, 0x79, 0x00, 0x32, 0x30, 0x30, 0x36,
+  0x2d, 0x30, 0x33, 0x2d, 0x31, 0x36, 0x54, 0x32,
+  0x30, 0x3a, 0x31, 0x36, 0x3a, 0x30, 0x38, 0x2b,
+  0x30, 0x31, 0x3a, 0x30, 0x30, 0x33, 0x6a, 0x31,
+  0x01, 0x00, 0x00, 0x00, 0x00, 0x49, 0x45, 0x4e,
+  0x44, 0xae, 0x42, 0x60, 0x82};
