@@ -126,6 +126,7 @@ protected:
 #include "../../art/quit.xpm"
 #include "../../art/find.xpm"
 #include "../../art/findrepl.xpm"
+#include "../../art/fullscreen.xpm"
 
 wxBitmap wxDefaultArtProvider_CreateBitmap(const wxArtID& id)
 {
@@ -189,6 +190,7 @@ wxBitmap wxDefaultArtProvider_CreateBitmap(const wxArtID& id)
     ART(wxART_QUIT,                                quit)
     ART(wxART_FIND,                                find)
     ART(wxART_FIND_AND_REPLACE,                    findrepl)
+    ART(wxART_FULL_SCREEN,                         fullscreen)
     ART(wxART_NEW,                                 new)
 
 
