@@ -61,6 +61,7 @@
 #include "../../art/tango/folder.h"
 #include "../../art/tango/folder_new.h"
 #include "../../art/tango/folder_open.h"
+#include "../../art/tango/fullscreen.h"
 #include "../../art/tango/go_down.h"
 #include "../../art/tango/go_first.h"
 #include "../../art/tango/go_home.h"
@@ -198,6 +199,7 @@ wxTangoArtProvider::CreateBitmap(const wxArtID& id,
 
         { wxART_FIND,               BITMAP_DATA(edit_find)                  },
         { wxART_FIND_AND_REPLACE,   BITMAP_DATA(edit_find_replace)          },
+        { wxART_FULL_SCREEN,        BITMAP_DATA(full_screen)                },
     };
 
     #undef BITMAP_ARRAY_NAME
