@@ -124,6 +124,7 @@ wxString wxArtIDToStock(const wxArtID& id)
 
     ART(wxART_FIND,                                GTK_STOCK_FIND)
     ART(wxART_FIND_AND_REPLACE,                    GTK_STOCK_FIND_AND_REPLACE)
+    ART(wxART_FULL_SCREEN,                         GTK_STOCK_FULLSCREEN)
 
     #undef ART
 
